--- a/blogAssignment/assets/css/main.css
+++ b/blogAssignment/assets/css/main.css
@@ -133,71 +133,12 @@ i {
     color: var(--light-color);
 }
 
-/*search*/
-.search-bar {
-    width: 100%;
-    max-width: 100%;
-    height: 100vh;
-    background-color: var(--primary-background-color);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    display: flex;
-    opacity: 0;
-    transform: scale(0);
-    transition: opacity .5s;
-}
-
 .bar-inner {
     margin: auto;
     display: flex;
     flex-direction: column;
     gap: var(--gap);
     text-align: center;
-}
-
-.form {
-    display: flex;
-    justify-content: center;
-}
-
-.form-input,
-.form-btn {
-    display: inline-block;
-    outline: none;
-    border: 2px solid var(--secondary-background-color);
-    padding: 1.5rem;
-    color: var(--light-color-alt);
-}
-
-.form-input {
-    border-right: none;
-    width: 100%;
-    background-color: var(--primary-background-color);
-}
-
-.form-btn {
-    margin-left: -.5rem;
-    border-left: none;
-    background-color: var(--secondary-background-color);
-    text-transform: uppercase;
-    width: 8rem;
-}
-
-.form-note {
-    font-size: var(--font-size-xsm);
-    align-self: flex-end;
-}
-
-.form-close-btn {
-    position: absolute;
-    top: 1.5rem;
-    right: 1.5rem;
-    border: 2px solid var(--secondary-background-color);
-    width: 4rem;
-    height: 4rem;
-    display: flex;
 }
 
 /*blog post*/ 
@@ -230,49 +171,6 @@ i {
 /* Header JavaScript Styles */
 .header.activated {
     box-shadow: 0 1px .5rem var(--transparent-light-color);
-}
-
-.form {
-    display: flex;
-    justify-content: center;
-}
-
-.form-input,
-.form-btn {
-    display: inline-block;
-    outline: none;
-    border: 2px solid var(--secondary-background-color);
-    padding: 1.5rem;
-    color: var(--light-color-alt);
-}
-
-.form-input {
-    border-right: none;
-    width: 100%;
-    background-color: var(--primary-background-color);
-}
-
-.form-btn {
-    margin-left: -.5rem;
-    border-left: none;
-    background-color: var(--secondary-background-color);
-    text-transform: uppercase;
-    width: 8rem;
-}
-
-.form-note {
-    font-size: var(--font-size-xsm);
-    align-self: flex-end;
-}
-
-.form-close-btn {
-    position: absolute;
-    top: 1.5rem;
-    right: 1.5rem;
-    border: 2px solid var(--secondary-background-color);
-    width: 4rem;
-    height: 4rem;
-    display: flex;
 }
 
 /* Form JavaScript styles */
@@ -361,7 +259,7 @@ i {
     align-items: center;
     gap: var(--gap);
     font-size: var(--font-size-xsm);
-    margin-bottom: 1rem;
+    margin-bottom: 1px;
 }
 
 .article-data-spacer {
@@ -377,6 +275,8 @@ i {
 
 .article-title {
     font-size: var(--font-size-md);
+    padding-top: 100px;
+
 }
 
 /* Sidebar */
