--- a/blogAssignment/assets/css/main.css
+++ b/blogAssignment/assets/css/main.css
@@ -11,16 +11,16 @@
     --hover-dark-color: var(--primary-background-color);
     --transparent-light-color: rgba(255, 255, 255, .05);
     --font-family: 'Overpass', sans-serif;
-    --font-size-xsm: 1.2rem;
-    --font-size-sm: 1.6rem;
-    --font-size-md: 2.4rem;
-    --font-size-lg: 3rem;
-    --font-size-xl: 4rem;
-    --gap: 2rem;
-    --margin-sm: 2rem;
-    --margin-md: 3rem;
-    --item-min-height-sm: 20rem;
-    --item-min-height-md: 30rem;
+    --font-size-xsm: 12px;
+    --font-size-sm: 16px;
+    --font-size-md: 24px;
+    --font-size-lg: 30px;
+    --font-size-xl: 40px;
+    --gap: 20px;
+    --margin-sm: 20px;
+    --margin-md: 30px;
+    --item-min-height-sm: 200px;
+    --item-min-height-md: 300px;
 }
 
 /* Base styles */
@@ -75,9 +75,9 @@ i {
 
 /* Reusable classes */
 .container {
-    max-width: 160rem;
+    max-width: 1600px;
     margin: 0 auto;
-    padding: 0 1.5rem;
+    padding: 0 15px;
 }
 
 .place-items-center {
@@ -87,7 +87,7 @@ i {
 }
 
 .section:not(.featured-articles) {
-    padding-block: 5rem;
+    padding-block: 50px;
 }
 
 .d-grid {
@@ -178,11 +178,11 @@ i {
 
 .article-category {
     position: absolute;
-    top: 1rem;
-    right: 1rem;
-    padding: 1rem;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
     background-color: var(--primary-background-color);
-    font-size: 1rem;
+    font-size: 10px;
     color: var(--light-color);
     text-transform: uppercase;
     z-index: 10;
@@ -193,7 +193,7 @@ i {
     position: absolute;
     left: 0;
     bottom: 0;
-    padding: 2rem 1.5rem;
+    padding: 20px 15px;
     background-color: var(--transparent-dark-color);
     z-index: 10;
     transition: background-color .5s;
@@ -243,7 +243,7 @@ i {
 .section-title {
     position: relative;
     font-size: var(--font-size-md);
-    margin-bottom: 6rem;
+    margin-bottom: 60px;
 }
 
 .section-title::after {
@@ -252,8 +252,8 @@ i {
     text-transform: uppercase;
     opacity: .1;
     position: absolute;
-    top: 1.5rem;
-    left: 2rem;
+    top: 15px;
+    left: 20px;
 }
 
 /* Older posts */
@@ -300,7 +300,7 @@ i {
 }
 
 .see-more-btn:hover i {
-    transform: translateX(.5rem);
+    transform: translateX(5px);
 }
 
 
