--- a/blogAssignment/assets/css/main.css
+++ b/blogAssignment/assets/css/main.css
@@ -127,6 +127,34 @@ i {
     cursor: pointer;
 }
 
+/*.signupbtn {
+    padding: 4px 2px;
+    background-color: green;
+}
+.cancelbtn {
+    padding: 4px 2px;
+    background-color: red
+}
+.signupbtn, .cancelbtn{
+    float: left;
+    width: 6%;
+    border-radius: 5px; 
+    margin: 3px;
+    right: 50%;
+}
+
+.cancelbtn{
+    position: absolute;
+    right: 37%;
+    top: 35%;
+}
+
+.signupbtn{
+    position: absolute;
+    right: 30%;
+    top: 35%;
+}*/
+
 .bar-inner {
     margin: auto;
     display: flex;
